--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "be-university",
   "version": "1.0.0",
   "description": "Backend API for University Website",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src -d dist",
-    "build:watch": "babel src -d dist --watch",
-    "test": "node test-api.js",
-    "test:api": "node test-api.js"
+    "build:watch": "babel src -d dist --watch"
   },
   "keywords": [
     "university",
@@ -21,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "chalk": "^5.6.0",
@@ -28,6 +28,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.0.3",
     "node-fetch": "^3.3.2",
     "winston": "^3.11.0"
