--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "sharp": "^0.34.3",
+    "uuid": "^11.1.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
